include bootstrap and jquery-ui with rails gems; fix player issue on tablet's #19

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,60 +1,71 @@
+@import "bootstrap";
 
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .container-fluid {
-        margin-top: 20px
-      }
-      .sidebar-nav {
-        padding: 9px;
-        .search-form-sidebar{
-          display:none;
-          button{
-            margin-top: 10px
-          }
-        }
-      }
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.container-fluid {
+  margin-top: 20px
+}
+.sidebar-nav {
+  padding: 9px;
+  .search-form-sidebar{
+    display:none;
+    button{
+      margin-top: 10px
+    }
+  }
+}
 
-      nav{
-        .collapse{
-          padding-left: 454px;
-          padding-right:330px;
-        }
+@media(max-width: $screen-md-min){
+    nav .collapse{
+      padding-left: 154px !important;
+    }
+  }
 
-        .search-form-header{
-          width:300px;
-          margin-left: -300px;
-        }
+nav{
+  .collapse{
+    padding-left: 454px;
+    padding-right:330px;
+  }
 
-        ul.navbar-nav{
-          margin-right: -330px !important;
-        }
-      }
+  .search-form-header{
+    width:300px;
+    margin-left: -300px;
+  }
+
+  ul.navbar-nav{
+    margin-right: -330px !important;
+  }
+
+  .navbar-form .btn{
+    margin-top:0px;
+  }
+}
       
       
 
-      @media (max-width: 980px) { 
-        
-        /* Enable use of floated navbar text */
+@media (max-width: $screen-md-min) { 
+  
+  /* Enable use of floated navbar text */
 
-        .navbar-text.pull-right {
-          float: none;
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-        .search-form-header{
-          display:none;
-        }
+  .navbar-text.pull-right {
+    float: none;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .search-form-header{
+    display:none;
+  }
 
-        .sidebar-nav{
-          margin: 10px;
-          .search-form-sidebar{
-            display:inline;
-          }
-        }
+  .sidebar-nav{
+    margin: 10px;
+    .search-form-sidebar{
+      display:inline;
+    }
+  }
 
-      }
+}
 
 .truncate {
   white-space: nowrap;
@@ -84,10 +95,6 @@ textarea {
 
 a:hover{
   color: #005580
-}
-
-.navbar-form .btn{
- margin-top:0px;
 }
 
 footer{
