--- a/app/assets/stylesheets/player.css.scss
+++ b/app/assets/stylesheets/player.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap";
+
 .ui-slider {
 	position: relative;
 	text-align: left;
@@ -67,12 +69,15 @@
 	padding-top: 4px;
 	height: 30px;
 }
-@media (min-width: 980px){
+@media (min-width: $screen-sm-min){
 	.player-xs{
 		display: none !important;
 	}
+	.player-lg{
+		max-width: 400px;
+	}
 }
-@media (max-width: 980px) {
+@media (max-width: $screen-sm-min) {
 	.player-xs{
 		display: inline !important;
 		float: right;
